--- a/src/app/componentes/funcionario/cadastrar-func/cadastrar-func.component.html
+++ b/src/app/componentes/funcionario/cadastrar-func/cadastrar-func.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="card mat-elevation-z4 card-form">
   <div class="card-body">
-    <button mat-mini-fab color="primary" routerLink="/funcCargo/{{id_cargo}}" title="Voltar página"[ngStyle]="{'color':'white'}"><mat-icon >keyboard_backspace</mat-icon></button>
+    <button mat-mini-fab color="primary" routerLink="/cargo" title="Voltar página"[ngStyle]="{'color':'white'}"><mat-icon >keyboard_backspace</mat-icon></button>
     <div class="titulo">
       <h1>Cadastro de Funcionários</h1>
     </div>
