--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -18,7 +18,7 @@
             </svg>
             <input type="password" class="fundo-form__input pass" placeholder="Senha" formControlName="senha"/>
           </div>
-          <button type="button" class="fundo-form__submit" [disabled]="!form.valid" routerLink="/cargos">Entrar</button>
+          <button type="button" class="fundo-form__submit" [disabled]="!form.valid" routerLink="/cargo">Entrar</button>
           <p class="fundo-form__signup">Não é administrador? &nbsp;<a>Clique aqui</a></p>
         </div>
       </form>
