--- a/src/app/template/home/home.component.scss
+++ b/src/app/template/home/home.component.scss
@@ -1,5 +1,5 @@
 .fundo-home {
-  background-image: url('../../../../assets/istockphoto-466424908-170667a.jpg');
+  background-image: url('../../../assets/istockphoto-466424908-170667a.jpg');
   height: 730px;
   background-repeat: no-repeat;
   background-size: cover;
