--- a/src/app/componentes/funcionario/atribuir-cargo/atribuir-cargo.component.scss
+++ b/src/app/componentes/funcionario/atribuir-cargo/atribuir-cargo.component.scss
@@ -1,28 +1,29 @@
-// .fundo {
-//   height: 730px;
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   background-position: center;
-//   position: relative;
-//   height: 100%;
-//   overflow: auto;
-// }
-
-.topo-card {
-  background-image: url('../../../../assets/mentoria.jpg');
-  background-size: cover;
-  height: 230px;
-  text-align: center;
+#botao-volta {
+  margin-top: 4%;
+  margin-left: -2%
 }
 
-.topo-card h1 {
-  margin-top: 11%;
-  font-weight: 900;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: white;
+#container-func {
+  background: linear-gradient(to bottom, rgba(245, 245, 245, 0.8) 0%, white 100%);
+  border: 1px solid lightgray;
+  border-radius: 1%;
 }
 
-.card {
+#func-card {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+#info-func {
+  margin-top: 10%
+}
+
+.cargo-form mat-form-field {
+  margin-left: 0;
+  width: 90%;
+}
+
+#card-cargo {
   position: relative;
   // height: 100%;
   background: linear-gradient(to bottom, rgba(245, 245, 245, 0.8) 0%, white 100%);
