--- a/src/app/componentes/funcionario/editar-func/editar-func.component.html
+++ b/src/app/componentes/funcionario/editar-func/editar-func.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="card mat-elevation-z4 card-form">
   <div class="card-body">
-    <button mat-mini-fab color="primary" routerLink="/funcCargo/{{id_cargo}}" title="Voltar página"[ngStyle]="{'color':'white'}"><mat-icon >keyboard_backspace</mat-icon></button>
+    <button mat-mini-fab color="primary" routerLink="/funcionarios" title="Voltar página"[ngStyle]="{'color':'white'}"><mat-icon >keyboard_backspace</mat-icon></button>
     <div class="titulo">
       <h1>Editor de Funcionários</h1>
     </div>
@@ -16,7 +16,7 @@
         <input type="text" matInput placeholder="Cidade" [(ngModel)]="func.func_cidade" name="func_cidade" formControlName="func_cidade">
       </mat-form-field>
       <div class="botoes">
-        <button class="btn btn-warning mx-3" (click)="trocarCargo()">Trocar Cargo</button>
+        <!-- <button class="btn btn-warning mx-3" (click)="trocarCargo()">Trocar Cargo</button> -->
         <button mat-raised-button color="accent" [disabled]="!form.valid" (click)="editarFunc()">Atualizar</button>
       </div>
     </form>
