--- a/src/app/componentes/mentor/mentores-cargo/mentores-cargo.component.html
+++ b/src/app/componentes/mentor/mentores-cargo/mentores-cargo.component.html
@@ -1,41 +1,124 @@
 <app-header></app-header>
-<div class="fundo">
-  <div class="card mat-elevation-z4 card-form">
-    <div class="card-body">
-      <button mat-mini-fab color="primary" routerLink="/cargos" title="Voltar página"[ngStyle]="{'color':'white'}"><mat-icon >keyboard_backspace</mat-icon></button>
-      <div class="titulo">
-        <h1>Programa de Mentoria</h1>
-      </div>
-
-      <form class="example-form">
-        <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Nome do(a) Mentor(a)</mat-label>
-          <input type="text" matInput placeholder="Nome" [(ngModel)]="mentor.mentor_nome" name="mentor_nome" formControlName="mentor_nome">
-        </mat-form-field>
-        <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Cargo do(a) Mentor(a)</mat-label>
-          <input type="text" matInput placeholder="Cargo" [(ngModel)]="mentor.mentor_cargo" name="mentor_cargo" formControlName="mentor_cargo">
-        </mat-form-field>
-        <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Foto do(a) Mentor(a)</mat-label>
-          <input type="text" matInput placeholder="Foto" [(ngModel)]="mentor.mentor_foto" name="mentor_foto" formControlName="mentor_foto">
-        </mat-form-field>
-        <div class="botoes">
-
-          <button mat-raised-button class="btn btn-warning" *ngIf="mentorCadastrado">Alterar dados do Mentor</button>
-          <div *ngIf="!mentorCadastrado">
-            <mat-form-field>
-              <mat-label>Mentores disponíveis:</mat-label>
-              <mat-select [(ngModel)]="mentorSemCargo" name="mentorSemCargo" (ngModelChange)="mostrarMentor()">
-                <mat-option *ngFor="let mentor of mentoresSemCargo" [value]="mentor">
-                  {{mentor.mentor_nome}} - {{mentor.mentor_cargo}}
-                </mat-option>
-              </mat-select>
+<div class="container">
+  <div class="row">
+    <div class="col-6 mx-5" style="margin-top: 6%">
+      <div class="card">
+        <div class="topo-card">
+          <button mat-mini-fab color="primary" routerLink="/cargo" title="Voltar página" [ngStyle]="{'color':'white'}"
+            style="margin-right: 92%; margin-top: 1%;">
+            <mat-icon>keyboard_backspace</mat-icon>
+          </button>
+          <h1>Programa de Mentoria</h1>
+        </div>
+        <!-- <div class="card mat-elevation-z4 card-form"> -->
+        <div class="card-body">
+          <!-- <button mat-mini-fab color="primary" routerLink="/cargo" title="Voltar página"[ngStyle]="{'color':'white'}"><mat-icon >keyboard_backspace</mat-icon></button> -->
+          <div class="titulo">
+            <h1>Dados do Cargo #{{cargo.id_cargo}}</h1>
+          </div>
+          <form class="cargo-form">
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Nome do Cargo</mat-label>
+              <input type="text" matInput placeholder="Cargo" [(ngModel)]="cargo.car_nome" name="car_nome" readonly>
             </mat-form-field>
-            <button mat-raised-button class="btn btn-warning" class="mx-5">Confirmar</button>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Atribuição</mat-label>
+              <input type="text" matInput placeholder="Atribuição" [(ngModel)]="cargo.car_atribuicao"
+                name="car_atribuicao" readonly>
+            </mat-form-field>
+          </form>
+        </div>
+        <!-- </div> -->
+      </div>
+    </div>
+    <div class="col-5" style="margin-top: 6%">
+      <div class="card">
+        <div class="card-body">
+          <div class="titulo">
+            <h1>Mentor(a)</h1>
+          </div>
+          <form class="mentor-form">
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>ID do(a) Mentor(a)</mat-label>
+              <input class="mentor-input" type="text" matInput placeholder="#ID" [(ngModel)]="mentor.id_mentor"
+                name="id_mentor" readonly>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Nome do(a) Mentor(a)</mat-label>
+              <input class="mentor-input" type="text" matInput placeholder="Mentor" [(ngModel)]="mentor.mentor_nome"
+                name="mentor_nome" readonly>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Cargo do(a) Mentor(a)</mat-label>
+              <input type="text" matInput placeholder="Cargo" [(ngModel)]="mentor.mentor_cargo" name="mentor_cargo"
+                readonly>
+            </mat-form-field>
+          </form>
+          <hr>
+          <div class="card">
+            <div class="titulo mt-3">
+              <h1>Atualizar Mentor(a)</h1>
+            </div>
+            <div class="card-body">
+              <div class="buttons">
+                <div class="button1 mx-2">
+                  <button class="bot-card" (click)="open(modalAlterar)">Alterar</button>
+
+                  <!-- Modal de confirmação para alterar mentor -->
+                  <ng-template #modalAlterar let-modal>
+                    <div class="modal-header">
+                      <h4 class="modal-title" id="excluir">Escolha o(a) Mentor(a) desejado(a):</h4>
+                      <button type="button" class="close btn" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body modal-mentor" style="margin: 0 auto;">
+                      <label for="mentorSemCargo">Nome do(a) Mentor(a)</label>
+                      <select [(ngModel)]="mentorSemCargo" name="mentorSemCargo"
+                      (ngModelChange)="mostrarMentor()" id="mentorSemCargo">
+                      <option value="" disabled selected>- - -</option>
+                      <option *ngFor="let mentor of mentoresSemCargo" [ngValue]="mentor">
+                        {{mentor.mentor_nome}} - {{mentor.mentor_cargo}}
+                      </option>
+                    </select>
+                    </div>
+                    <div class="modal-footer">
+                      <button mat-raised-button type="button" (click)="modal.close('Save click')"
+                        class="mx-3">Cancelar</button>
+                      <button mat-raised-button type="button" (click)="atribuirMentor();modal.close('Save click')"
+                        color="accent">Confirmar</button>
+                    </div>
+                  </ng-template>
+
+                </div>
+                <div class="button2">
+                  <button class="bot-card" type="button" (click)="open(modalExcluir)">Desvincular</button>
+
+                  <!-- Modal de confirmação para excluir mentor -->
+                  <ng-template #modalExcluir let-modal>
+                    <div class="modal-header">
+                      <h4 class="modal-title" id="excluir">Aviso</h4>
+                      <button type="button" class="close btn" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Deseja realmente desvincular o(a) Mentor(a) <strong>#{{mentor.id_mentor}} {{mentor.mentor_nome}}</strong> do
+                        Cargo selecionado?</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button mat-raised-button type="button" (click)="modal.close('Save click')"
+                        class="mx-3">Cancelar</button>
+                      <button mat-raised-button type="button" (click)="deixarCargoSemMentor();modal.close('Save click')"
+                        color="warn">Excluir</button>
+                    </div>
+                  </ng-template>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </form>
+      </div>
     </div>
   </div>
 </div>
