--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -16,7 +16,7 @@
       <button mat-menu-item routerLink="/funcionario/cadastrar">Adicionar</button>
     </mat-menu>
     <mat-menu #mentor="matMenu">
-      <button mat-menu-item routerLink="/mentores/listaMentor">Lista</button>
+      <button mat-menu-item routerLink="/mentores">Lista</button>
       <button mat-menu-item routerLink="/mentores/cadastrar">Adicionar</button>
     </mat-menu>
 </mat-toolbar>
