--- a/src/app/componentes/mentor/mentores/mentores.component.html
+++ b/src/app/componentes/mentor/mentores/mentores.component.html
@@ -1,47 +1,69 @@
 <app-header></app-header>
+
 <div style="text-align: center;" class="mt-4">
   <h1>Lista completa de Mentores</h1>
 </div>
 <mat-form-field appearance="standard">
   <mat-label>Buscar</mat-label>
-  <input matInput (keyup)="filtrar($event)" placeholder="Ex. Supervisor" #input>
+  <input matInput (keyup)="filtrar($event)" placeholder="Ex. João da Silva" #input>
 </mat-form-field>
 <section style="overflow-x:auto" class="table-container container mat-elevation-z3 p-0">
-  <table mat-table [dataSource]="tabelaMentor">
+  <table mat-table [dataSource]="tabelaMentor" matSort>
     <!-- Coluna ID -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let mentor"> #{{mentor.id_mentor}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <td mat-cell *matCellDef="let mentor">{{mentor.id_mentor}} </td>
     </ng-container>
     <!-- Coluna Nome -->
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
       <td mat-cell *matCellDef="let mentor"> {{mentor.mentor_nome}} </td>
     </ng-container>
-    <!-- Coluna nome do cargo -->
-    <ng-container matColumnDef="cargo">
-      <th mat-header-cell *matHeaderCellDef> <span class="mx-5">Cargo </span></th>
-      <td mat-cell *matCellDef="let mentor"> <span class="mx-5">{{mentor.mentor_cargo}}</span> </td>
+    <!-- Coluna CPF -->
+    <ng-container matColumnDef="cpf">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CPF </th>
+      <td mat-cell *matCellDef="let mentor"> {{mentor.mentor_cpf | cpf}} </td>
     </ng-container>
-    <!-- Coluna id_cargo -->
+    <!-- Coluna Cargo do Mentor -->
+    <ng-container matColumnDef="cargo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Cargo </th>
+      <td mat-cell *matCellDef="let mentor"> {{mentor.mentor_cargo}} </td>
+    </ng-container>
+    <!-- Coluna Foto do Mentor -->
+    <ng-container matColumnDef="foto">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
+      <td mat-cell *matCellDef="let mentor"> {{mentor.mentor_foto}} </td>
+    </ng-container>
+    <!-- Coluna ID do cargo -->
     <ng-container matColumnDef="id_mentorado">
-      <th mat-header-cell *matHeaderCellDef> <span class="mx-5">ID Mentorado </span></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">ID Cargo Mentorado </span></th>
       <td mat-cell *matCellDef="let mentor"> <span class="mx-5">#{{mentor.id_cargo}}</span> </td>
     </ng-container>
-    <!-- Coluna nome cargo -->
+    <!-- Coluna nome do cargo -->
     <ng-container matColumnDef="cargo_mentorado">
-      <th mat-header-cell *matHeaderCellDef> <span class="mx-5">Nome do Cargo Mentorado </span></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Cargo Mentorado</span></th>
       <td mat-cell *matCellDef="let mentor"> <span class="mx-5">{{mentor.car_nome}}</span> </td>
     </ng-container>
-    <!-- Coluna atribuicao cargo -->
-    <ng-container matColumnDef="atrib_mentorado">
-      <th mat-header-cell *matHeaderCellDef> <span class="mx-5">Descrição do Cargo Mentorado </span></th>
-      <td mat-cell *matCellDef="let mentor"> <span class="mx-5">{{mentor.car_atribuicao}}</span> </td>
+    <!-- Coluna bonificacao -->
+    <ng-container matColumnDef="bonificacao">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Bonificação </span></th>
+      <td mat-cell *matCellDef="let mentor"> <button id="botao-atribuir"
+          routerLink="bonificacao/{{mentor.id_mentor}}">Bonificações</button>
+      </td>
+    </ng-container>
+    <!-- Coluna ações -->
+    <ng-container matColumnDef="acoes">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Ações </span></th>
+      <td mat-cell *matCellDef="let mentor">
+        <button class="bot-card" routerLink="editar/{{mentor.id_mentor}}/{{mentor.id_cargo}}">Editar</button>
+        <button class="bot-card" type="button"
+          routerLink="excluir/{{mentor.id_mentor}}">Excluir</button>
+      </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <!--Paginação da tabela, utilizando o mat-paginator-->
-  <mat-paginator #paginatorFunc [pageSizeOptions]="[8, 10, 15]" showFirstLastButtons></mat-paginator>
+  <mat-paginator #paginatorMentor [pageSizeOptions]="[7]" showFirstLastButtons></mat-paginator>
 </section>
 <app-footer></app-footer>
