--- a/src/app/componentes/mentor/mentores-cargo/mentores-cargo.component.html
+++ b/src/app/componentes/mentor/mentores-cargo/mentores-cargo.component.html
@@ -60,7 +60,7 @@
             </mat-form-field>
           </form>
           <hr>
-          <div class="card">
+          <div class="card" id="card-alteracao">
             <div class="titulo mt-3">
               <h1>Atualizar Mentor(a)</h1>
             </div>
