--- a/src/app/componentes/funcionario/editar-func/editar-func.component.html
+++ b/src/app/componentes/funcionario/editar-func/editar-func.component.html
@@ -12,6 +12,10 @@
         <input type="text" matInput placeholder="Nome" [(ngModel)]="func.func_nome" name="func_nome" formControlName="func_nome">
       </mat-form-field>
       <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>CPF</mat-label>
+        <input type="text" matInput placeholder="XXX.XXX.XXX-XX" [(ngModel)]="func.func_cpf" name="func_cpf" formControlName="func_cpf">
+      </mat-form-field>
+      <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Cidade</mat-label>
         <input type="text" matInput placeholder="Cidade" [(ngModel)]="func.func_cidade" name="func_cidade" formControlName="func_cidade">
       </mat-form-field>
