--- a/src/app/componentes/mentor/mentores/mentores.component.scss
+++ b/src/app/componentes/mentor/mentores/mentores.component.scss
@@ -8,7 +8,7 @@
 #botao-atribuir:before {
   content: "» ";
   opacity: 0;
-  margin-left: -15px;
+  margin-left: -1px;
   transition-duration: 0.2s;
 }
 
@@ -62,6 +62,31 @@ button.bot-card:hover {
   color: #fff;
 }
 
-#foto-modal>img {
-  max-width: 450px;
+th{
+  background-color: #f57c00;
+  color: white
+}
+
+td {
+  text-align: left;
+}
+
+.mat-column-id {
+  font-weight: 900;
+}
+
+
+.table-container {
+  width: 80%;
+}
+
+.busca {
+  margin-left: 10%;
+}
+
+#imagem {
+  width: 230px;
+  position: absolute;
+  left: 76.5%;
+  top: 10.7%
 }
