--- a/src/app/componentes/funcionario/atribuir-cargo/atribuir-cargo.component.html
+++ b/src/app/componentes/funcionario/atribuir-cargo/atribuir-cargo.component.html
@@ -5,7 +5,7 @@
     <div class="col-6 mx-5" style="margin-top: 1%">
       <div class="container-fluid row" id="container-func">
         <div id="func-card" class="col">
-          <img src="../../../../assets/funcionario-fundo.png" style="height: 380px;">
+          <img src="../../../../{{funcionario.func_foto}}" style="height: 380px;">
         </div>
         <!-- <div class="card mat-elevation-z4 card-form"> -->
         <div id="info-func" class="col">
