--- a/src/app/componentes/mentor/cadastrar-mentor/cadastrar-mentor.component.html
+++ b/src/app/componentes/mentor/cadastrar-mentor/cadastrar-mentor.component.html
@@ -25,7 +25,7 @@
       </div>
       <hr>
       <div class="mb-3">
-        <label class="form-label">Foto do Mentor</label>
+        <label class="form-label">Foto do(a) Mentor(a)</label>
         <input type="file" class="form-control" [disabled]="!mentorCadastrado" (change)="importarImg($event)">
       </div>
     </form>
