--- a/src/app/componentes/mentor/mentores/mentores.component.html
+++ b/src/app/componentes/mentor/mentores/mentores.component.html
@@ -1,9 +1,11 @@
 <app-header></app-header>
 
-<div style="text-align: center;" class="mt-4">
-  <h1>Lista completa de Mentores</h1>
+<img src="../../../../assets/mentores.png" alt="" id="imagem" style="opacity: 65%;">
+<div style="text-align: center;" class="mt-5">
+  <h1><strong>Mentores</strong></h1>
+  <h2 style="color: #8d6e63;">--- Bonificações ---</h2>
 </div>
-<mat-form-field appearance="standard">
+<mat-form-field appearance="standard" class="busca">
   <mat-label>Buscar</mat-label>
   <input matInput (keyup)="filtrar($event)" placeholder="Ex. João da Silva" #input>
 </mat-form-field>
@@ -53,25 +55,26 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Cargo Mentorado</span></th>
       <td mat-cell *matCellDef="let mentor"> <span class="mx-5">{{mentor.car_nome}}</span> </td>
     </ng-container>
-    <!-- Coluna bonificacao -->
+    <!-- Coluna atribuir cargo -->
     <ng-container matColumnDef="bonificacao">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Bonificação </span></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-4">Ações</span></th>
       <td mat-cell *matCellDef="let mentor"> <button id="botao-atribuir"
           routerLink="bonificacao/{{mentor.id_mentor}}">Bonificações</button>
       </td>
     </ng-container>
     <!-- Coluna ações -->
-    <ng-container matColumnDef="acoes">
+    <!-- <ng-container matColumnDef="acoes">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Ações </span></th>
       <td mat-cell *matCellDef="let mentor">
-        <button class="bot-card" routerLink="editar/{{mentor.id_mentor}}/{{mentor.id_cargo}}">Editar</button>
-        <button class="bot-card" type="button" routerLink="excluir/{{mentor.id_mentor}}">Excluir</button>
+        <button class="bot-card" routerLink="/mentorionario/editar/{{mentor.id_mentorionario}}/{{mentor.id_cargo}}">Editar</button>
+        <button class="bot-card" type="button"
+          routerLink="/mentorionario/excluir/{{mentor.id_mentorionario}}">Excluir</button>
       </td>
-    </ng-container>
+    </ng-container> -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <!--Paginação da tabela, utilizando o mat-paginator-->
-  <mat-paginator #paginatorMentor [pageSizeOptions]="[7]" showFirstLastButtons></mat-paginator>
+  <mat-paginator #paginatorMentor [pageSizeOptions]="[5]" showFirstLastButtons></mat-paginator>
 </section>
 <app-footer></app-footer>
